chore: Add unused logos to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ scratch.html
 
 # peers code
 errorsALX.js
+src/image/Google-maps-logo.png
+src/image/udacity_mark.png
+src/image/React-icon.png
+src/image/foursquare-logo.png
